DietPi-Software | Apache2: Fixed a syntax error that leads to Apache logging to "/error.log" instead of "/var/log/apache2/error.log"
DietPi-Software | Nukkit: Fixed the broken download link on installation. Many thanks to @symbios24 for reporting bug and providing solution: https://github.com/Fourdee/DietPi/issues/1875
DietPi-Config | Fixen an issue, where IPv6 could not be disabled on RPi. On current kernel version it is no dedicated kernel module any more and needs to be toggled via "/boot/cmdline.txt".

AlloGUI v9:
- Changing the root password, no longer breaks web interface: https://github.com/Fourdee/DietPi/issues/1841
- Resolved issues with terminal leakage in the web interface: https://github.com/Fourdee/DietPi/issues/1841
- System settings: Current version is always shown, even if an update is available.
- System settings: Allo Katana, now available for selection. https://github.com/Fourdee/DietPi/issues/1849

-----------------------------------------------------------------------------------------------------------

v6.9
(07/06/18)

Changes / Improvements / Optimizations:
General | During first run of DietPi (and during this patch), you will now be given the option to change the global password for 'root' + 'dietpi' accounts, and all future software to be installed that requires a password: https://github.com/Fourdee/DietPi/issues/1782
General | Increased verbosity and logging of DietPi boot scripts to assist with debugging: https://github.com/Fourdee/DietPi/issues/1772
General | G_ERROR_HANDLER: Retry mechanic added, allows you to re-run and retry the last command when an error occurs. Also included option to send DietPi a bug report when an issue occurs.
General | NTP removed from DietPi-Config time sync options and DietPi core packages. All time sync modes are now offered via systemd-timesyncd, which is part of every Debian based core system: https://github.com/Fourdee/DietPi/pull/1628