@@ -351,9 +351,9 @@
 	G_WHIP_BUTTON_CANCEL_TEXT='Exit'
 	G_WHIP_MENU_ARRAY=(
 
-		'' '────Other──────────────────────────────'
+		'' '──── Other '
 		'22' 'Generic device (unknown to DietPi)'
-		'' '────SBC─(Core devices)─────────────────'
+		'' '──── SBC─(Core devices) '
 		'10' 'Odroid C1'
 		'12' 'Odroid C2'
 		'14' 'Odroid N1'
@@ -363,10 +363,10 @@
 		# '1' 'Raspberry Pi 1/Zero (512mb)'
 		# '2' 'Raspberry Pi 2'
 		# '3' 'Raspberry Pi 3/3+'
-		'' '────PC─────────────────────────────────'
+		'' '──── PC '
 		'21' 'x86_64 Native PC'
 		'20' 'x86_64 VMware/VirtualBox'
-		'' '────SBC─(Limited support devices)──────'
+		'' '──── SBC─(Limited support devices) '
 		'52' 'Asus Tinker Board'
 		'53' 'BananaPi (sinovoip)'
 		'51' 'BananaPi Pro (Lemaker)'
