@@ -60,7 +60,7 @@
 		G_WHIP_MENU_ARRAY+=('Help' 'What does DietPi-Backup do?')
 		G_WHIP_MENU_ARRAY+=('Location' 'Change where your backup will be saved and restored from.')
 		G_WHIP_MENU_ARRAY+=('Custom Filters' 'Modify custom include/exclude filters for backups.')
-		G_WHIP_MENU_ARRAY+=('' '──Run──────────────────────────────────────────────────────')
+		G_WHIP_MENU_ARRAY+=('' '── Run ')
 		G_WHIP_MENU_ARRAY+=('Backup' 'Create (or update) a backup of this device.')
 		G_WHIP_MENU_ARRAY+=('Restore' 'Restore this device from a previous backup.')
 
