@@ -4377,10 +4377,10 @@ _EOF_
 
 		G_WHIP_MENU_ARRAY=(
 
-			'' '─── Performance ─────────────────────────────'
+			'' '─── Performance '
 			'CPU' 'Benchmark CPU performance.'
 			'RAM' 'Benchmark RAM performance.'
-			'' '─── Filesystem ──────────────────────────────'
+			'' '─── Filesystem '
 			'RootFS' 'Benchmark SD/EMMC IO performance.'
 			'External Drive' 'Benchmark External Drive IO performance.'
 			'Custom' 'Benchmark from a selection of mounted devices.'
