@@ -794,7 +794,7 @@ _EOF_
 		do
 
 			drive_available=1
-			G_WHIP_MENU_ARRAY+=('' "─ ${acategory_list[$i]} ────────────────────────────────────────")
+			G_WHIP_MENU_ARRAY+=('' "─ ${acategory_list[$i]} ")
 
 			for ((j=0; j<${#aDRIVE_MOUNT_SOURCE[@]}; j++))
 			do
@@ -811,7 +811,7 @@ _EOF_
 					#Drive is fully mounted:
 					if (( ${aDRIVE_ISMOUNTED[$j]} )); then
 
-						G_WHIP_MENU_ARRAY+=("${aDRIVE_MOUNT_TARGET[$j]}" ": ${aDRIVE_MOUNT_SOURCE[$j]} | $string_fstype | Size: ${aDRIVE_SIZE_TOTAL[$j]} | Used: ${aDRIVE_SIZE_USED[$j]} (${aDRIVE_SIZE_PERCENTUSED[$j]})")
+						G_WHIP_MENU_ARRAY+=("${aDRIVE_MOUNT_TARGET[$j]}" ": ${aDRIVE_MOUNT_SOURCE[$j]} | $string_fstype | Capacity: ${aDRIVE_SIZE_TOTAL[$j]} | Used: ${aDRIVE_SIZE_USED[$j]} (${aDRIVE_SIZE_PERCENTUSED[$j]})")
 
 					#Not mounted, why?
 					else
@@ -838,7 +838,7 @@ _EOF_
 
 		unset acategory_list
 
-		G_WHIP_MENU_ARRAY+=('' '───────────────────────────────────────────────────────')
+		G_WHIP_MENU_ARRAY+=('' '─')
 
 		if (( ! $drive_available )); then
 
@@ -984,7 +984,7 @@ _EOF_
 
 				fi
 
-				whiptail_desc+="\nAllocation:   Total = ${aDRIVE_SIZE_TOTAL[$INDEX_DRIVE_BEING_EDITED]}b | Used = ${aDRIVE_SIZE_USED[$INDEX_DRIVE_BEING_EDITED]}b (${aDRIVE_SIZE_PERCENTUSED[$INDEX_DRIVE_BEING_EDITED]})"
+				whiptail_desc+="\nAllocation:   Capacity: ${aDRIVE_SIZE_TOTAL[$INDEX_DRIVE_BEING_EDITED]}b | Used: ${aDRIVE_SIZE_USED[$INDEX_DRIVE_BEING_EDITED]}b (${aDRIVE_SIZE_PERCENTUSED[$INDEX_DRIVE_BEING_EDITED]})"
 				whiptail_desc+='\nStatus:       Drive is online and ready for use'
 
 				#Userdata location/swapfile/Readonly
@@ -1586,13 +1586,9 @@ NB:
 			samba_clientuser=$G_WHIP_RETURNED_VALUE
 
 			G_WHIP_DEFAULT_ITEM="$samba_clientpassword"
-			G_WHIP_INPUTBOX 'Please enter the fileservers password\n - eg: LetMeIn'
-			if (( $? != 0 )); then
-
-				break
-
-			fi
-			samba_clientpassword=$G_WHIP_RETURNED_VALUE
+			G_WHIP_PASSWORD 'Please enter the fileservers password\n - eg: LetMeIn'
+			samba_clientpassword=$result
+			unset result
 
 			G_WHIP_DEFAULT_ITEM="$samba_fp_mount_target"
 			G_WHIP_INPUTBOX 'Please enter a unique folder name for the mount location (eg: samba). This will be placed in /mnt/'
