@@ -408,26 +408,26 @@ _EOF_
 		#DietPi software
 		aSOFTWARE_CATEGORIES_DIETPI=(
 
-			'────Desktops──────────────────────────────────────────────' #0
-			'────Remote Desktop Access─────────────────────────────────' #1
-			'────Media Systems─────────────────────────────────────────' #2
-			'────BitTorrent / Download Tools───────────────────────────' #3
-			'────Cloud / Backups───────────────────────────────────────' #4
-			'────Emulation & Gaming────────────────────────────────────' #5
-			'────Social / Search───────────────────────────────────────' #6
-			'────Camera / Surveillance─────────────────────────────────' #7
-			'────WiFi Hotspot──────────────────────────────────────────' #8
-			'────System Stats / Management─────────────────────────────' #9
-			'────Remote Access─────────────────────────────────────────' #10
-			'────Hardware Projects─────────────────────────────────────' #11
-			'────System Security───────────────────────────────────────' #12
-			'────Webserver Stacks──────────────────────────────────────' #13
-			'────Pi-hole───────────────────────────────────────────────' #14
-			'────File Servers──────────────────────────────────────────' #15
-			'────VPN Servers───────────────────────────────────────────' #16
-			'────Advanced Networking───────────────────────────────────' #17
-			'────Home Automation───────────────────────────────────────' #18
-			'────Printing──────────────────────────────────────────────' #19
+			'──── Desktops ' #0
+			'──── Remote Desktop Access ' #1
+			'──── Media Systems ' #2
+			'──── BitTorrent / Download Tools ' #3
+			'──── Cloud / Backups ' #4
+			'──── Emulation & Gaming ' #5
+			'──── Social / Search ' #6
+			'──── Camera / Surveillance ' #7
+			'──── WiFi Hotspot ' #8
+			'──── System Stats / Management ' #9
+			'──── Remote Access ' #10
+			'──── Hardware Projects ' #11
+			'──── System Security ' #12
+			'──── Webserver Stacks ' #13
+			'──── Pi-hole ' #14
+			'──── File Servers ' #15
+			'──── VPN Servers ' #16
+			'──── Advanced Networking ' #17
+			'──── Home Automation ' #18
+			'──── Printing ' #19
 
 		)
 
@@ -436,15 +436,15 @@ _EOF_
 		#Linux software
 		aSOFTWARE_CATEGORIES_LINUX=(
 
-			'────SSH Clients───────────────────────────────────────────' #0
-			'────Fileserver Clients────────────────────────────────────' #1
-			'────File Managers─────────────────────────────────────────' #2
-			'────System────────────────────────────────────────────────' #3
-			'────Shared Libraries──────────────────────────────────────' #4
-			'────Networking / Tools────────────────────────────────────' #5
-			'────Development / Programming─────────────────────────────' #6
-			'────Text Editors──────────────────────────────────────────' #7
-			'────Desktop Utilities─────────────────────────────────────' #8
+			'──── SSH Clients ' #0
+			'──── Fileserver Clients ' #1
+			'──── File Managers ' #2
+			'──── System ' #3
+			'──── Shared Libraries ' #4
+			'──── Networking / Tools ' #5
+			'──── Development / Programming ' #6
+			'──── Text Editors ' #7
+			'──── Desktop Utilities ' #8
 
 		)
 
@@ -14983,7 +14983,6 @@ _EOF_
 		#software type for this menu
 		local input_mode=$1 #-1=search all mode #0=dietpi 1=linux
 		local display_software_menu=1 #only used to disable display of CHECKLIST when search finds no results
-		G_WHIP_CHECKLIST_ARRAY=()
 
 		#Search Mode
 		if (( $input_mode == -1 )); then
@@ -15047,6 +15046,8 @@ _EOF_
 
 			fi
 
+			G_WHIP_CHECKLIST_ARRAY=()
+
 			local max_categories=$MAX_SOFTWARE_CATEGORIES_DIETPI
 			if (( $input_mode == 1 )); then
 
@@ -15107,7 +15108,7 @@ _EOF_
 							fi
 
 							#Add this option to whiptail list
-							G_WHIP_CHECKLIST_ARRAY+=($j "${aSOFTWARE_WHIP_NAME[$j]}: ${aSOFTWARE_WHIP_DESC[$j]}" "$selected")
+							G_WHIP_CHECKLIST_ARRAY+=($j "${aSOFTWARE_WHIP_NAME[$j]}: ${aSOFTWARE_WHIP_DESC[$j]}" $selected)
 
 						fi
 
@@ -15121,7 +15122,7 @@ _EOF_
 
 		if (( $display_software_menu )); then
 
-			G_WHIP_SIZE_X_MAX=80
+			G_WHIP_SIZE_X_MAX=83
 			G_WHIP_BUTTON_CANCEL_TEXT='Back'
 			G_WHIP_CHECKLIST "Please use the spacebar to select the software you wish to install.\n - Software and usage details: https://dietpi.com/software\n - NB: Pressing 'ESC' or selecting 'Back' will clear all changed selections"
 
@@ -15461,7 +15462,7 @@ _EOF_
 
 			'Help!' 'Links to online guides, docs and information'
 			'DietPi-Config' 'Feature-rich configuration tool for your device'
-			'' '─── Select Software ─────────────────────────────'
+			'' '─── Select Software '
 			'Search' 'Find a software title for installation'
 			'Software Optimized' 'Select DietPi optimized software for installation'
 			'Software Additional' 'Select additional Linux software for installation'
@@ -15470,7 +15471,7 @@ _EOF_
 			'Log System' ": $index_logging_text"
 			'Webserver Preference' ": $index_webserver_text"
 			'User Data Location' ": $user_data_location_description"
-			'' '─── Install or Remove Software ──────────────────'
+			'' '─── Install or Remove Software '
 			'Uninstall' 'Select installed software for removal'
 			'Install' 'Go >> Start installation for selected software'
 
