@@ -586,6 +586,25 @@
 			# - Requires additional line on Y
 			((lines_required_whip_y++))
 
+			#Auto length for ─
+			local i=0
+			for (( i=0; i<${#G_WHIP_MENU_ARRAY[@]}; i++ ))
+			do
+
+				if [[ ${G_WHIP_MENU_ARRAY[$i]} == '─'* ]]; then
+
+					local target_size=$(echo "scale=0; $WHIP_SIZE_X / 1.4" | bc -l)
+					while (( ${#G_WHIP_MENU_ARRAY[$i]} < $target_size ))
+					do
+
+						G_WHIP_MENU_ARRAY[$i]+='─'
+
+					done
+
+				fi
+
+			done
+
 		# - G_WHIP_CHECKLIST_ARRAY
 		elif (( $input_mode == 2 )); then
 
@@ -596,6 +615,25 @@
 				lines_required_whip_z=1
 
 			fi
+
+			#Auto length for ─
+			local i=0
+			for (( i=0; i<${#G_WHIP_CHECKLIST_ARRAY[@]}; i++ ))
+			do
+
+				if [[ ${G_WHIP_CHECKLIST_ARRAY[$i]} == '─'* ]]; then
+
+					local target_size=$(echo "scale=0; $WHIP_SIZE_X / 1.4" | bc -l)
+					while (( ${#G_WHIP_CHECKLIST_ARRAY[$i]} < $target_size ))
+					do
+
+						G_WHIP_CHECKLIST_ARRAY[$i]+='─'
+
+					done
+
+				fi
+
+			done
 
 		fi
 
@@ -617,16 +655,17 @@
 
 					((lines_max_whip_z--))
 
+					#	lines_max_whip_z < 1 indicates WHIP_SIZE_Y is too small to fit all message text and any lines_required_whip_z.
+					#	So we must force lines_max_whip_z=1 resulting in some missing message text
+					if (( $lines_max_whip_z < 1 )); then
+
+						lines_max_whip_z=2
+						G_DIETPI-NOTIFY 2 "Lines required for Whiptail box and its contents (y=$lines_required_whip_y, z=$lines_required_whip_z), exceeds screen dimensions (y=$WHIP_SIZE_Y)."
+						break
+
+					fi
+
 				done
-
-				#	lines_max_whip_z < 1 indicates WHIP_SIZE_Y is too small to fit all message text and any lines_required_whip_z.
-				#	So we must force lines_max_whip_z=1 resulting in some missing message text
-				if (( $lines_max_whip_z < 1 )); then
-
-					lines_max_whip_z=2
-					G_DIETPI-NOTIFY 2 "Lines required for Whiptail box and its contents (y=$lines_required_whip_y, z=$lines_required_whip_z), exceeds screen dimensions (y=$WHIP_SIZE_Y)."
-
-				fi
 
 				WHIP_SIZE_Y=$(( $lines_required_whip_y + $lines_max_whip_z ))
 				WHIP_SIZE_Z=$lines_max_whip_z
@@ -784,7 +823,7 @@
 
 		if (( $G_USER_INPUTS )); then
 
-			G_WHIP_INIT 1
+			time G_WHIP_INIT 1
 			export G_WHIP_RETURNED_VALUE=$(whiptail --title "$G_PROGRAM_NAME" --menu "$WHIP_MESSAGE" --default-item "$G_WHIP_DEFAULT_ITEM" --ok-button "$G_WHIP_BUTTON_OK_TEXT" --cancel-button "$G_WHIP_BUTTON_CANCEL_TEXT" --backtitle "$WHIP_BACKTITLE" $WHIP_SIZE_Y $WHIP_SIZE_X $WHIP_SIZE_Z "${G_WHIP_MENU_ARRAY[@]}" 3>&1 1>&2 2>&3; echo $? > /tmp/.WHIP_MENU_RESULT)
 
 			result=$(cat /tmp/.WHIP_MENU_RESULT)
